Incluindo a descricao dos cursos e inserindo o curso de API.

--- a/templates/pessoal.html
+++ b/templates/pessoal.html
@@ -70,7 +70,7 @@
 									    	<input type="button" name="" id="curso1" class="button" value="Saber mais">
 									  	</div>
 									  	<div  id="curso1_desc" class="card-footer text-muted" style="display: none; text-align: justify;">
-										    No curso usei um programa em Python que simulava microcontroladores, com ele consegui enviar dados por telemetria para a plataforma AWS IoT Core. Ao receber os dados, fiz o direcionamento deles para o armazenamento DynamoDB e também criei regras de notificação usando AWS SNS para receber alertas por SMS caso algum dado esteja fora do esperado.<br><br>
+										    No curso desenvolvi um programa em Python que simulava microcontroladores, com ele consegui enviar dados por telemetria para a plataforma AWS IoT Core. Ao receber os dados, fiz o direcionamento deles para o armazenamento DynamoDB e também criei regras de notificação usando AWS SNS para receber alertas por SMS caso algum dado esteja fora do esperado.<br><br>
 										    Também aprendi sobre mecanismo de segurança na comunicação telemétrica com a AWS através de certificados.
 										    <b>Nesse curso utilizei:</b><br>
 										    <ul>
@@ -79,7 +79,7 @@
 										    	<li>AWS SNS (Simple Notofocation Service)</li>
 										    	<li>Python</li>
 										    </ul>
-										    No total de aulas o curso teve duração de 8 horas de duração, mais as horas extras que usei para explorar mais e fazer minhas tentativas individuais.<br>
+										    No total de aulas o curso teve duração de 8 horas, mais as horas extras que usei para explorar mais e fazer minhas tentativas individuais.<br>
 										    <center>
 										    	<button id="curso1_fechar" type="button" class="small button">Fechar</button>
 										    </center>
@@ -101,7 +101,7 @@
 									  	</div>
 									  	<div  id="curso2_desc" class="card-footer text-muted" style="display: none; text-align: justify;">
 										    O curso apresentou os conceitos e práticas em duas partes: a primeira foi 16 horas de Computação em Nuvem no ambiente Azure, a segunda parte foi 20 horas de Inteligência Artificial também no Azure.<br><br>
-										    Ao final do curso fui capaz de descrever as duas áreas, falar de seus fundamentos, e realizar práticas com os recursos da nuvem da Microsoft. Como resultado do meu desempenho, ganhei voucher de 100% para realizar a certificação de nível iniciante em Inteligência Artificial da Microsoft AI-900).<br><br>
+										    Ao final do curso fui capaz de descrever as duas áreas, falar de seus fundamentos, e realizar práticas com os recursos da nuvem da Microsoft. Como resultado do meu desempenho, ganhei voucher de 100% para realizar a certificação de nível iniciante em Inteligência Artificial da Microsoft (AI-900).<br><br>
 										    Além do conteúdo técnico, o curso teve 4 horas de <i>soft skills</i> onde vi uma das melhores coisas que já aprendi: a escutatória.<br><br>
 										    <b>Nesse curso utilizei:</b><br>
 										    <ul>
@@ -148,8 +148,15 @@
 									  	<div class="card-body">
 									    	<h5 class="card-title">Por FAT e CISCO</h5>
 									    	<p class="card-text">Introdução à Cibersegurança</p>
-									    	<input type="button" name="" class="button" value="Saber mais">
+									    	<input type="button" id="curso4" name="" class="button" value="Saber mais">
 									  	</div>
+									  	<div  id="curso4_desc" class="card-footer text-muted" style="display: none; text-align: justify;">
+										    Foi abordado os principais tipos de ataques cibernéticos, os diferentes tipos de malware e como cada um deles age, as ferramentas usadas na área de segurança para detectar e responder à incidentes, tudo de forma introdutória.<br><br>
+										    O curso foi totalmente teórico e deu noções mais robustas sobre o que é Cibersegurança e mudança de hábitos digitais visando a proteção dos dados.<br>
+										    <center>
+										    	<button id="curso4_fechar" type="button" class="small button">Fechar</button>
+										    </center>
+										</div>
 									</div>
 								</div>
 							
@@ -163,8 +170,24 @@
 									  	<div class="card-body">
 									    	<h5 class="card-title">Por FAT e CISCO</h5>
 									    	<p class="card-text">CyberOps Associate</p>
-									    	<input type="button" name="" class="button" value="Saber mais">
+									    	<input type="button" id="curso5" name="" class="button" value="Saber mais">
 									  	</div>
+									  	<div  id="curso5_desc" class="card-footer text-muted" style="display: none; text-align: justify;">
+										    Apesar do conteúdo teórico, o curso deu ênfase na prática dos laboratórios: ambientes virtuais para análises de segurança, ferramenta de monitoramento de rede, investigação de vulnerabilidades de endpoints, modelos de resposta à incidentes, classificar os tipos de ataques, análise dos protocolos de rede, criptografia e backup, entre outros.<br><br>
+										    <b>Nesse curso utilizei:</b><br>
+										    <ul>
+										    	<li>Security Onion (SO)</li>
+										    	<li>Kibana</li>
+										    	<li>Sguil</li>
+										    	<li>NetworkMiner</li>
+										    	<li>Etc</li>
+										    </ul>
+										    O curso foi ministrado através de aulas semanais, os laboratórios práticos também eram entregues a cada semana. Ao todo foram 88 horas: 80 horas de conteúdo técnico e 8 horas de <i>soft skills</i>.<br><br>
+										    Todo o conteúdo foi desenvolvido pela CISCO e aplicado pela FAT - Fundação de Apoio à Tecnologia em parceria com a Faculdade de Tecnologia do Estado de São Paulo.<br>
+										    <center>
+										    	<button id="curso5_fechar" type="button" class="small button">Fechar</button>
+										    </center>
+										</div>
 									</div>
 								</div>
 
@@ -178,8 +201,35 @@
 									  	<div class="card-body">
 									    	<h5 class="card-title">Por CertProf</h5>
 									    	<p class="card-text">Scrum Foundation Professional Certificate</p>
-									    	<input type="button" name="" class="button" value="Saber mais">
+									    	<input type="button" id="curso6" name="" class="button" value="Saber mais">
 									  	</div>
+									  	<div  id="curso6_desc" class="card-footer text-muted" style="display: none; text-align: justify;">
+										    Nesse curso aprendi com mais detalhes sobre o Scrum: o que é, recursos, como aplicar. Para cada tópico foi apresentado explicações e exemplos de uso.<br><br>
+										    Os tópicos abordados foram: o papel das pessoas dentro do Scrum; definição, planejamento e revisão da sprint; backlog da sprint e do produto; incrementos; reunião dirária.<br>
+										    <center>
+										    	<button id="curso6_fechar" type="button" class="small button">Fechar</button>
+										    </center>
+										</div>
+									</div>
+								</div>
+
+								<div class="col-12">
+									<div class="card text-center">
+										<div class="card-header" style="background-color: #ADD8E6;">
+									    	<b>API &nbsp; <i class="fas fa-code"></i></b>
+									  	</div>
+									  	<div class="card-body">
+									    	<h5 class="card-title">Por Digital Innovation One</h5>
+									    	<p class="card-text">Desenvolvimento Avançado de API com Flask</p>
+									    	<input type="button" id="curso7" name="" class="button" value="Saber mais">
+									  	</div>
+									  	<div  id="curso7_desc" class="card-footer text-muted" style="display: none; text-align: justify;">
+										    A simplicidade do Flask permitiu compreender os conceitos REST e as questões mais avançadas sobre API de uma forma bem clara. O curso abordou desenvolvimento eficiente de APIs usando Flask-RESTful e Postman, com persistência em banco de dados e autenticação.<br><br>
+										    O conteúdo foi bem enxuto e focado na explicação do desenvolvimento das APIs e explicação de principais erros.<br>
+										    <center>
+										    	<button id="curso7_fechar" type="button" class="small button">Fechar</button>
+										    </center>
+										</div>
 									</div>
 								</div>
 
