Alterado a forma como exibe a descricao dos cursos: oculta/exibe descricao.

--- a/templates/index.html
+++ b/templates/index.html
@@ -173,7 +173,7 @@
 						<hr>
 						<br>
 						<center>
-							<i>"{{ frase[0] }}"</i>
+							<i style="color: #696969;">"{{ frase[0] }}"</i>
 							{{ frase[1] }}
 
 							<hr width="40">
