Inserindo um novo projeto (Previsao do Tempo). Incluindo link da licensa do HTML5Up.

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <!--
-	Strata by HTML5 UP
+	By HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+
+	Adapted by Guilherme Donizetti
 -->
 <html>
 	<head>
@@ -63,7 +65,7 @@
 				<!-- Two -->
 					<section id="two">
 						<h1>PROJETOS</h1>
-						
+
 						<h2>Ao Conselho Nacional de Desenvolvimento Científico e Tecnológico (CNPq)</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
@@ -94,6 +96,16 @@
 								<h3>WayPy (pacote)</h3>
 								<p>O pacote contém 8 métodos diferentes de buscas em grafo, cada método utiliza um critério diferente e com isso poder obter diferentes resultados.</p>
 								<a href="../templates/pacote_waypy.html" class="icon">Saber mais</a>
+							</article>
+						</div>
+
+						<h2>Outros</h2>
+						<div class="row">
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="../static/images/prev_tempo.png" class="image fit thumb"><img src="../static/images/previsao_tempo/img3.gif" alt="" /></a>
+								<h3>Previsão do Tempo.</h3>
+								<p>Programa para consulta e visualização de dados meteorológicos / previsão do tempo. Exibe as linhas de temperatura mínima e máxima de 10 dias em uma cidade.</p>
+								<a href="../templates/previsao_tempo.html" class="icon">Saber mais</a>
 							</article>
 						</div>
 
@@ -181,7 +193,7 @@
 						
 						<center>
 						<ul class="copyright">
-							Essa página foi desenvolvida com o apoio de <a href="http://html5up.net" target="_blank">HTML5 UP</a>, que cedeu livremente o belo projeto para ser adaptado por mim, Guilherme!</li>
+							Essa página foi desenvolvida com o apoio de <a href="https://html5up.net/license" target="_blank">HTML5 UP</a>, que cedeu livremente o belo projeto para ser adaptado por mim, Guilherme!</li>
 						</ul>
 						</center>
 
