Incluindo link para pagina inicial em todas as paginas. Correcoes de Portugues.

--- a/templates/artigo_tg.html
+++ b/templates/artigo_tg.html
@@ -39,7 +39,10 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h3>Artigo Científico do Trabalho de Graduação</h3>
+							<h3>
+								<b><a href="/">Página Inicial</a> <i class="fas fa-angle-right"></i> </b>
+								Artigo do TG
+							</h3>
 						</header>
 						<p>Trata-se de um artigo científico que contém a minha pesquisa e o desenvolvimento do meu trabalho final.<br>
 						Na fundamentação teórica, o artigo apresenta pesquisas desde as características físicas de um <i>data center</i>, até questões de softwares como protocolos de comunicação, sistemas de gerenciamento de bancos de dados e serviços em Nuvem.<br><br>
@@ -51,7 +54,7 @@
 								<button class="primary button">PDF do artigo</button>
 							</a>
 						</center><br><br>
-						Se usar o artigo para qualquer fim, não esqueça de referenciá-lo, pois ele faz parte do acervo de trabalhos de graduação da Faculdade de Tecnologia do Estado de São Paulo. Referência do artigo:<br><br>
+						Se usar o artigo para qualquer fim, não esqueça de referenciá-lo, pois ele faz parte do acervo de trabalhos de graduação da Faculdade de Tecnologia do Estado de São Paulo. E assim <b>evitamos qualquer tipo de plágio</b>. Referência do artigo:<br><br>
 						<blockquote>
 							ALMEIDA, Eugênio Sper de; DONIZETTI, Guilherme da Silva; RODRIGUES, Luiz Fernando da Costa. <b>APLICAÇÃO DE INTERNET DAS COISAS PARA MONITORAMENTO DE TEMPERATURA, UMIDADE E PRESENÇA EM DATA CENTERS E AMBIENTES COMPUTACIONAIS CRÍTICOS.</b> 2021. Disponível em: <'https://www.fateccruzeiro.edu.br/projetos/acervo/b3bfaf7a9a722448b352f1b3731b5802.pdf'> Acesso em: sua_data.
 						</blockquote>
