--- a/templates/erro.html
+++ b/templates/erro.html
@@ -26,7 +26,10 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h3>Página não encontrada</h3>
+							<h3>
+								<b><a href="/">Página Inicial</a> <i class="fas fa-angle-right"></i> </b>
+								Página não encontrada
+							</h3>
 						</header>
 						<p>A página que você está tentando acessar não está disponível.<br><br>
 					</section>
