--- a/templates/index.html
+++ b/templates/index.html
@@ -123,7 +123,7 @@
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="../static/images/dc_monit.png" class="image fit thumb"><img src="../static/images/dc_monit.png" alt="" /></a>
-								<h3>Trabalho de Graduação (em desenvolvimento)</h3>
+								<h3>Trabalho de Graduação</h3>
 								<p>O projeto de TG é baseado nas pesquisas do projeto desenvolvido ao CNPq e inclui o desenvolvimento em Computação em Nuvem para monitoramento remoto.</p>
 								<a href="../templates/tg.html" class="icon">Saber mais</a>
 							</article>
