--- a/templates/pacote_waypy.html
+++ b/templates/pacote_waypy.html
@@ -39,7 +39,10 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h3>WayPy - pacote</h3>
+							<h3>
+								<b><a href="/">Página Inicial</a> <i class="fas fa-angle-right"></i> </b>
+								WayPy - pacote
+							</h3>
 						</header>
 						<p>O pacote realiza buscas em grafo para tentar encontrar caminho entre dois pontos distintos, usando diferentes métodos.<br>
 						O tipo de problema que o WayPy se propõe a resolver são os que precisam encontrar uma saída a partir de um ponto específico. Então, encontrar rota entre duas cidades em um mapa é um problema que pode usar o pacote para resolver, o projeto <a href="https://share.streamlit.io/guilhermedonizetti/ia_disciplina/index.py" target="_blank">Rotas Cidades</a> é um exemplo disso.<br>
