--- a/templates/pessoal.html
+++ b/templates/pessoal.html
@@ -41,7 +41,10 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h3>Sobre mim</h3>
+							<h3>
+								<b><a href="/">Página Inicial</a> <i class="fas fa-angle-right"></i> </b>
+								Sobre mim
+							</h3>
 						</header>
 
 						<center>
@@ -49,7 +52,7 @@
 						</center>
 
 						<center>
-						Olá, tenho 21 anos, atualmente curso Análise e Desenvolvimento de Sistemas na Faculdade de Tecnologia do Estado de São Paulo (em Cruzeiro).
+						Olá, tenho 21 anos, sou formado em Análise e Desenvolvimento de Sistemas na Faculdade de Tecnologia do Estado de São Paulo (em Cruzeiro).
 						Meu interesse por Tecnologia da Informação começou com 17 anos, quando ingressei no curso técnico em Informática na Etec Cruzeiro, onde eu realmente criei gosto pela área.<br><br>
 						Meu desenvolvimento é contínuo. A cada atividade em equipe, para mim, é uma oportunidade para aprender novas competências técnicas e humanas. Até das situações mais adversas costumo tirar algum aprendizado.<br>
 						Nas atividades em equipe sempre sou engajado e colaborativo, não hesito em pedir ajuda e em ajudar. Das <i>soft skills</i> mais evidentes em mim, destaco a adaptabilidade, colaboração, responsabilidade e resiliência.<br><br>
