--- a/templates/previsao_tempo.html
+++ b/templates/previsao_tempo.html
@@ -30,16 +30,21 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
+
 				</div>
 			</header>
 
 		<!-- Main -->
 			<div id="main">
 
+
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h3>Previsão do Tempo &nbsp; <i class="fas fa-cloud-sun-rain"></i></h3>
+							<h3>
+								<b><a href="/">Página Inicial</a> <i class="fas fa-angle-right"></i> </b>
+								Previsão do Tempo &nbsp; <i class="fas fa-cloud-sun-rain"></i>
+							</h3>
 						</header>
 						<p>O programa realiza consulta de dados meteorológicos (previsão do tempo) para uma determinada cidade e exibe em um gráfico de linhas as temperaturas mínimas e máximas para os próximos 10 dias. Os dados utilizados são consumidos de uma API (HG Brasil).<br>
 						Além de visualizar os dados, o usuário pode baixar uma imagem do gráfico em PNG como forma de exportar o conteúdo.<br><br>
