--- a/templates/sendex.html
+++ b/templates/sendex.html
@@ -39,7 +39,10 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h3>Sendex</h3>
+							<h3>
+								<b><a href="/">Página Inicial</a> <i class="fas fa-angle-right"></i> </b>
+								Sendex
+							</h3>
 						</header>
 						<p>O Sendex é um programa para envio de e-mails usando o Gmail. Desenvolvido dentro das disciplinas de Testes de Software e Laboratório de Engenharia de Software.<br>
 						Através da interface o usuário informa os campos obrigatórios e opcionais que deverão compor o e-mail. Após isso o programa tenta conexão com um agente SMTP local instalado na máquina e dará continuidade na entrega do correio.<br>
