--- a/templates/tcc.html
+++ b/templates/tcc.html
@@ -39,7 +39,10 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h3>Plataforma de otimização na relação entre empregado e empregador na Construção Civil</h3>
+							<h3>
+								<b><a href="/">Página Inicial</a> <i class="fas fa-angle-right"></i> </b>
+								Plataforma de otimização na relação entre empregado e empregador na Construção Civil
+							</h3>
 						</header>
 						<p>O TCC desenvolvido no curso técnico em Informática foi desenvolvido para busca rápida, com comodidade e competitividade, de profissionais de C. Civil.<br>
 						O usuário profissional deve criar sua conta e preencher seu perfil, que inclui informações de: idade, cidade, especialidade, contatos, entre outros.<br>
