--- a/templates/tg.html
+++ b/templates/tg.html
@@ -39,7 +39,10 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h3>Trabalho de Graduação</h3>
+							<h3>
+								<b><a href="/">Página Inicial</a> <i class="fas fa-angle-right"></i> </b>
+								Trabalho de Graduação
+							</h3>
 						</header>
 						<p>O projeto é o trabalho final entregue na Faculdade de Tecnologia do Estado de São Paulo (em Cruzeiro).<br>
 						O trabalho é um sistema de monitoramento de variáveis ambientais para <i>data centers</i>, semelhante ao <a href="cnpq_projeto.html">projeto do CNPq</a>, porque na verdade o projeto entregue ao CNPq é a base deste.<br>
