--- a/templates/zenith.html
+++ b/templates/zenith.html
@@ -39,7 +39,10 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h3>Zenith</h3>
+							<h3>
+								<b><a href="/">Página Inicial</a> <i class="fas fa-angle-right"></i> </b>
+								Zenith
+							</h3>
 						</header>
 						<p>O Zenith é um programa para visualização de dados em nível local desenvolvido para o evento de tecnologia Acelera da Fatec Cruzeiro.<br>
 						Para usuários que não tem noções de programação, banco de dados e/ou manipulação de dados, o Zenith oferece um grande auxílio. Independente do banco de dados o Zenith pode se conectar, o único requisito é que a base de dados seja MySQL.<br>
