--- a/templates/api.html
+++ b/templates/api.html
@@ -39,7 +39,10 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h3>API Cidades</h3>
+							<h3>
+								<b><a href="/">Página Inicial</a> <i class="fas fa-angle-right"></i> </b>
+								API
+							</h3>
 						</header>
 						<p>A API possui uma função simples de responder às requisições GET para entregar dados de latitude e longitude de cidades do Vale do Paraíba.<br>
 						É possível requisitar cidades individuais ou todas, de qualquer forma o tráfego é muito pequeno por conta do conjunto de cidades existentes serem igual a 39. Por esse motivo, se tornou a API usada pelo <a href="ia_rotas_cidades.html" class="icon">Rotas Cidades</a> que realiza várias requisições a cada execução.<br><br>
