Incluindo grafico de contribuições no GitHub em meu portfolio.

--- a/templates/index.html
+++ b/templates/index.html
@@ -62,6 +62,17 @@
 						</ul>
 					</section>
 
+					<div class="box alt">
+						<div class="row gtr-50 gtr-uniform">
+							<div class="col-12">
+								Contribuições recentes no GitHub
+								<span class="image fit">
+									<img src="https://activity-graph.herokuapp.com/graph?username=guilhermedonizetti&theme=react-dark&custom_title=Minhas contribuições no GitHub" alt="Conselho">
+								</span>
+							</div>
+						</div>
+					</div>
+
 				<!-- Two -->
 					<section id="two">
 						<h1>PROJETOS</h1>
@@ -90,7 +101,6 @@
 								<p>Métodos de Inteligência Artificial para encontrar a melhor rota entre uma cidade e outra tendo, obrigatoriamente, que passar por uma cidade X.</p>
 								<a href="../templates/ia_rotas_cidades.html" class="icon">Saber mais</a>
 							</article>
-							<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="../static/images/waypy_pypi.png" class="image fit thumb"><img src="../static/images/waypy_pypi.png" alt="" /></a>
 								<h3>WayPy (pacote)</h3>
@@ -145,6 +155,17 @@
 								<p>O TCC teve a proposta de desenvolver um site para facilitar a busca de profissionais de Construção Civil, também foi usado na Exposição Técnica Industrial da Etec.</p>
 								<a href="../templates/tcc.html" class="icon">Saber mais</a>
 							</article>
+						</div>
+
+						<div class="box alt">
+							<div class="row gtr-50 gtr-uniform">
+								<div class="col-12">
+									Todas as minhas contribuições no GitHub
+									<span class="image fit">
+										<img src="https://github-readme-streak-stats.herokuapp.com?user=guilhermedonizetti&theme=blux&date_format=j%20M%5B%20Y%5D&background=000000" />
+									</span>
+								</div>
+							</div>
 						</div>
 
 					</section>
