--- a/templates/api.html
+++ b/templates/api.html
@@ -48,7 +48,7 @@
 						É possível requisitar cidades individuais ou todas, de qualquer forma o tráfego é muito pequeno por conta do conjunto de cidades existentes serem igual a 39. Por esse motivo, se tornou a API usada pelo <a href="ia_rotas_cidades.html" class="icon">Rotas Cidades</a> que realiza várias requisições a cada execução.<br><br>
 						<b>Tecnologias usadas: </b>Python, Flask, Postman, RESTful e Heroku.</p>
 						<br>
-						<a href="https://api-valeparaiba.herokuapp.com/">
+						<a href="https://api-valeparaiba.herokuapp.com/" target="_blank">
 							<button class="primary button">Acesse ao programa!</button>
 						</a>
 						&nbsp;&nbsp;
@@ -68,12 +68,6 @@
 			</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.poptrox.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
 
 	</body>
 </html>
