--- a/templates/index.html
+++ b/templates/index.html
@@ -195,8 +195,9 @@
 						
 						<center>
 						<ul class="icons">
-							<li><a href="https://www.linkedin.com/guilhermedonizetti-ads/" class="icon brands fa-linkedin fa-2x"><span class="label">LinkedIn</span></a></li>
-							<li><a href="https://github.com/guilhermedonizetti/" class="icon brands fa-github fa-2x"><span class="label">Github</span></a></li>
+							<li><a href="https://br.linkedin.com/in/guilhermedonizetti-ads" class="icon brands fa-linkedin fa-2x" target="_blank"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://github.com/guilhermedonizetti/" class="icon brands fa-github fa-2x"  target="_blank"><span class="label">Github</span></a></li>
+							<li><a href="mailto:guilhermedonizettiads@gmail.com;guilhermetecnologias@gmail.com" class="icon brands fa-google fa-2x"><span class="label">Gmail</span></a></li>
 						</ul>
 
 						</center>
